--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light static-top">
-            <a class="navbar-brand" href="#">Bamazon</a>
+            <a class="navbar-brand" href="#" id="home-btn">Bamazon</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -27,12 +27,12 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa fa-shopping-cart"></i> Cart<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" id="cart-btn"><i class="fa fa-shopping-cart"></i> Cart<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <div class="row">
+        <div class="row home">
             <div class="col-md-12">
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
@@ -58,13 +58,18 @@
             </div>
         </div>
 
-        <div class="row mt-3">
+        <div class="row mt-3 home">
             <div class="col-md-12 productlist">
-
             </div>
         </div>
+        <div class="row mt-5 hide" id="cart-view">
+            <div class="col-md-10 mx-auto shopping-cart">
+
+            </div>
+
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
