--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light static-top">
-            <a class="navbar-brand" href="#" id="home-btn">Bamazon</a>
+            <a class="navbar-brand" href="/Home" id="home-btn">Bamazon</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +37,7 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active ">
-                            <img class="d-block w-100" src="./assets/images/shopping.jpg" height="500" alt="First slide">
+                            <img class="d-block w-100" src="./assets/images/shopping.jpeg" height="500" alt="First slide">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./assets/images/electronic.jpg" height="500" alt="Second slide">
@@ -63,8 +63,20 @@
             </div>
         </div>
         <div class="row mt-5 hide" id="cart-view">
-            <div class="col-md-10 mx-auto shopping-cart">
-
+            <div class="col-md-10 mx-auto">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">id</th>
+                            <th colspan="2">Item</th>
+                            <th scope="col"></th>
+                            <th scope="col">Unit Price</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Total</th>
+                        </tr>
+                    </thead>
+                    <tbody class="shopping-cart"></tbody>
+                </table>
             </div>
 
         </div>
