--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item">
+                        <a class="nav-link" href="/Manager" id="cart-btn">Manager<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" id="cart-btn"><i class="fa fa-shopping-cart"></i> Cart<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
@@ -59,8 +62,7 @@
         </div>
 
         <div class="row mt-3 home">
-            <div class="col-md-12 productlist">
-            </div>
+            <div class="col-md-12 productlist"></div>
         </div>
         <div class="row mt-5 hide" id="cart-view">
             <div class="col-md-10 mx-auto">
