Add update inventory page

--- a/public/manager.html
+++ b/public/manager.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bamazon/Manager</title>
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -40,7 +41,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <button type="button" class="dropdown-item btn" id="viewInvent-btn">View Low Inventory</button>
-                            <button type="button" class="dropdown-item btn">Add to Inventory</button>
+                            <button type="button" class="dropdown-item btn" id="updateStock-btn">Add to Inventory</button>
                         </div>
                     </li>
 
@@ -51,6 +52,7 @@
         <div class="pdt-view"></div>
         <div class="addPdt-view"></div>
         <div class="inventory-view"></div>
+        <div class="addStock-view"></div>
 
 
 
