Handle update stock

--- a/public/manager.html
+++ b/public/manager.html
@@ -41,7 +41,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <button type="button" class="dropdown-item btn" id="viewInvent-btn">View Low Inventory</button>
-                            <button type="button" class="dropdown-item btn" id="updateStock-btn">Add to Inventory</button>
+                            <button type="button" class="dropdown-item btn" id="updateStock-btn">Update Inventory</button>
                         </div>
                     </li>
 
